--- a/config/database.yml
+++ b/config/database.yml
@@ -12,15 +12,15 @@ default: &default
 
 development:
   <<: *default
-  database: vladlunekov_development
+  database: jogger_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: vladlunekov_test
+  database: jogger_test
 
 production:
   <<: *default
-  database: vladlunekov_prodcution
+  database: jogger_prodcution
